--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-ATLAS_URI=mongodb+srv://barcelparts:barcelparts@cluster0.uv4lk.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+BARCELPARTS_URI=mongodb+srv://barcelparts:barcelparts@cluster0.uv4lk.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+BARCELPARTS_NS=Barcelparts
 PORT=5000
